# multiplayer-chess-api

./: .env  Cargo.toml  README.md
migrations/: 20230816062726_create_users_table.down.sql  20230816062726_create_users_table.up.sql  20240215164220_create_friends_table.down.sql  20240215164220_create_friends_table.up.sql  20240215172525_create_games_table.down.sql  20240215172525_create_games_table.up.sql
src/: extractors.rs  game_organizer.rs  main.rs  sql.rs
src/actors/: game.rs  game_organizer.rs  game_ws.rs  mod.rs  ws_actions.rs
src/api/: game_ws.rs  healthcheck.rs  mod.rs  ws.rs
src/api/auth/: login.rs  mod.rs  register.rs
src/api/social/: mod.rs
src/chess_logic/: board.rs  chess_game.rs  direction.rs  mod.rs  piece.rs
src/chess_logic/piece/: direction.rs  mod.rs
src/extractors/: authentication_token.rs
src/slike_za_word/: main.rs
