[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
chrono = "0.4.26"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio", "macros"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
