[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web = { version = "4.4.1", features = ["cookies"] }
actix-web-actors = "4.2.0"
actix-ws = "0.2.5"
anyhow = "1.0.80"
chrono = "0.4.26"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1.35.1", features = ["macros"] }
